multiproject_istio/ape.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ape-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ape
      version: v1
  template:
    metadata:
      labels:
        app: ape
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      dnsPolicy: ClusterFirst
      containers:
      - name: service
        image: buoyantio/helloworld:0.1.4
        command:
        - "/bin/sh"
        - "-c"
        - "helloworld -addr=:7778 -text=orangutan "
        ports:
        - name: service
          containerPort: 7778
---
apiVersion: v1
kind: Service
metadata:
  name: ape-v1
spec:
  selector:
    app: ape
    version: v1
  ports:
  - name: http
    port: 80
    targetPort: 7778
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ape-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ape
      version: v2
  template:
    metadata:
      labels:
        app: ape
        version: v2
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      dnsPolicy: ClusterFirst
      containers:
      - name: service
        image: buoyantio/helloworld:0.1.4
        command:
        - "/bin/sh"
        - "-c"
        - "helloworld -addr=:7778 -text=gorilla "
        ports:
        - name: service
          containerPort: 7778
---
apiVersion: v1
kind: Service
metadata:
  name: ape-v2
spec:
  selector:
    app: ape
    version: v2
  ports:
  - name: http
    port: 80
    targetPort: 7778
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ape-v3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ape
      version: v3
  template:
    metadata:
      labels:
        app: ape
        version: v3
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      dnsPolicy: ClusterFirst
      containers:
      - name: service
        image: buoyantio/helloworld:0.1.4
        command:
        - "/bin/sh"
        - "-c"
        - "helloworld -addr=:7778 -text=chimpanzee -target=httpbin.httpbin.svc.cluster.local:8000/delay/2 "
        ports:
        - name: service
          containerPort: 7778
---
apiVersion: v1
kind: Service
metadata:
  name: ape-v3
spec:
  selector:
    app: ape
    version: v3
  ports:
  - name: http
    port: 80
    targetPort: 7778
---
apiVersion: v1
kind: Service
metadata:
  name: ape
spec:
  selector:
    app: ape
  ports:
  - name: http
    port: 80
    targetPort: 7778
---
