multiproject_istio/world.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: world-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: world
      version: v1
  template:
    metadata:
      labels:
        app: world
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      dnsPolicy: ClusterFirst
      containers:
      - name: service
        image: buoyantio/helloworld:0.1.4
        command:
        - "/bin/sh"
        - "-c"
        - "helloworld -addr=:7778 -text=world "
        ports:
        - name: service
          containerPort: 7778
---
apiVersion: v1
kind: Service
metadata:
  name: world-v1
spec:
  selector:
    app: world
    version: v1
  ports:
  - name: http
    port: 80
    targetPort: 7778
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: world-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: world
      version: v2
  template:
    metadata:
      labels:
        app: world
        version: v2
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      dnsPolicy: ClusterFirst
      containers:
      - name: service
        image: buoyantio/helloworld:0.1.4
        command:
        - "/bin/sh"
        - "-c"
        - "helloworld -addr=:7778 -text=earth "
        ports:
        - name: service
          containerPort: 7778
---
apiVersion: v1
kind: Service
metadata:
  name: world-v2
spec:
  selector:
    app: world
    version: v2
  ports:
  - name: http
    port: 80
    targetPort: 7778
---
apiVersion: v1
kind: Service
metadata:
  name: world
spec:
  selector:
    app: world
  ports:
  - name: http
    port: 80
    targetPort: 7778
---
