multiproject_istio/ape-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ape-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "allaboutapes.??.???.???.??.nip.io"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ape
spec:
  hosts:
  - "*"
  gateways:
  - ape-gateway
  http:
  - match:
    - uri:
        exact: /ape
    route:
    - destination:
        host: ape
        port:
          number: 80
