multiproject_istio/ingress_world.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: world
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /world
        backend:
          serviceName: world
          servicePort: 80
