multiproject_istio/vs4.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hello-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - istio-ingressgateway-istio-system.127.0.0.1.nip.io
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: world
spec:
  hosts:
  - world.world.svc.cluster.local
  gateways:
  - mesh
  http:
    - route:
      - destination:
          host: world.world.svc.cluster.local
          subset: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello
spec:
  hosts:
  - istio-ingressgateway-istio-system.127.0.0.1.nip.io
  gateways:
  - hello-gateway
  http:
  - match:
    - uri:
        exact: /aloha
    route:
    - destination:
        host: hello.hello.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: world
spec:
  host: world.world.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
